ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__while-stmt.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(r#\"while true { while_block(); }\"#)"
---
Stmt {
    kind: WhileStmt {
        condition: Expr {
            kind: BoolLit(
                true,
            ),
            span: 6..10,
        },
        body: [
            Stmt {
                kind: ExprStmt(
                    Expr {
                        kind: FnCall {
                            callee: Expr {
                                kind: Identifier(
                                    "while_block",
                                ),
                                span: 13..24,
                            },
                            args: [],
                        },
                        span: 13..26,
                    },
                ),
                span: 13..27,
            },
        ],
    },
    span: 0..29,
}
